UY-1300 Upgrade Attribute introspection UI to Vaadin 23